--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -1,13 +1,15 @@
 .services__container {
-  display: grid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
 .service {
   background: var(--color-bg-variant);
-  border-radius: 0 0 2rem 2rem;
+  border-radius: 2rem;
   border: 1px solid var(--color-primary);
   height: fit-content;
   transition: var(--transition);
+  width: var(--container-width-sm);
 }
 
 .service:hover {
@@ -19,25 +21,27 @@
 .service__head {
   background: var(--color-primary);
   padding: 2rem;
-  border-radius: 0 0 2rem 2rem;
+  border-radius: 2rem;
   box-shadow: 0 2rem 1rem rgba(0, 0, 0, 0.1);
 }
 
 .service__head h3 {
   color: var(--color-bg);
-  font-size: 1.2rem;
-  text-align: left;
-  padding: 0 0 0 2rem;
+  font-size: 1.5rem;
+  text-align: center;
 }
 
 .service__list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   padding: 2rem;
 }
 
 .service__list li {
   display: flex;
-  gap: 1rem;
+  gap: 1.2rem;
   margin-bottom: 0.8rem;
+  padding: 1rem;
 }
 
 .service__list-icon {
@@ -46,7 +50,7 @@
 }
 
 .service__list p {
-  font-size: 0.9rem;
+  font-size: 1rem;
 }
 
 /* media queries medium devices */
@@ -54,6 +58,9 @@
 @media screen and (max-width: 1024px) {
   .service {
     height: auto;
+  }
+  .service__list {
+    grid-template-columns: 1fr;
   }
 }
 
