--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,8 @@ body {
   background: var(--color-bg);
   color: var(--color-white);
   line-height: 1.7;
-  background-image: url(../src/assets/bg-texture.png);
+  background-color: hsl(236, 31%, 19%);;
+  /* background-image: url(../src/assets/bg-texture.png); */
 }
 
 /* GENERAL STYLES */
@@ -141,125 +142,3 @@ img {
     margin-bottom: 2rem;
   }
 }
-
-/* h2 {
-  font-size: 2rem;
-}
-
-h3 {
-  font-size: 1.6rem;
-}
-
-h4 {
-  font-size: 1.1rem;
-}
-
-h5 {
-  font-size: 0.95rem;
-}
-
-h6 {
-  font-size: 0.8rem;
-}
-
-.img {
-  display: block;
-  width: 100%;
-  object-fit: cover;
-}
-
-
-.btn {
-  display: inline-block;
-  width: fit-content;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  background: var(--color-light);
-  color: var(--color-black);
-  padding: 0.6rem 2.5rem;
-  border: 2px solid transparent;
-  border-radius: var(--border-radius-2);
-  cursor: pointer;
-}
-
-.btn:hover {
-  background-color: transparent;
-  border-color: var(--color-light);
-  transform: translateY(-0.5rem);
-}
-
-.btn.white {
-  background: var(--color-white);
-}
-
-.btn.white:hover {
-  background: transparent;
-  border-color: var(--color-white);
-}
-
-.btn.primary {
-  background: var(--color-primary);
-  text color always white that's why i didn't use a variable color 
-  color: white;
-}
-
-.btn.primary:hover {
-  background: transparent;
-  border-color: var(--color-primary);
-  color: var(--color-primary);
-}
-.btn.sm {
-  padding: 0.5rem 1.2rem;
-}
-
-
-@media screen and (max-width: 1024px) {
-  body {
-    font-size: 1rem;
-  }
-
-  .container {
-    width: var(--container-width-md);
-  }
-
-  section {
-    padding: 8rem 0;
-  }
-
-  section > p {
-    width: 72px;
-    margin-bottom: 3rem;
-  }
-
-  h1 {
-    font-size: 2rem;
-  }
-}
-
-
-@media screen and (max-width: 600px) {
-  h1 {
-    font-size: 2.4rem;
-  }
-
-  h2 {
-    font-size: 1.8rem;
-  }
-
-  h3 {
-    font-size: 1.4rem;
-  }
-
-  h4 {
-    font-size: 1rem;
-  }
-
-  .btn {
-    padding: 0.6rem 1.5rem;
-  }
-
-  section > p {
-    width: var(--container-width-md);
-  }
-} */
